@@ -25,8 +25,6 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <fork>true</fork>
-                    <executable>C:\Program Files\Java\jdk1.8.0_131\bin\javac</executable>
                 </configuration>
             </plugin>
             <plugin>
@@ -34,23 +32,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.20</version>
                 <configuration>
-                <forkCount>3</forkCount>
-                <reuseForks>true</reuseForks>
-				<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <suiteXmlFiles>
-                        <suiteXmlFile>/src/resources/java/testrunners/testng_sanity.xml</suiteXmlFile>
+                        <suiteXmlFile>testng_sanity.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <argLine>
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                    </argLine>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.aspectj</groupId>
-                        <artifactId>aspectjweaver</artifactId>
-                        <version>${aspectj.version}</version>
-                    </dependency>
-                </dependencies>
+                    </configuration>
             </plugin>
         </plugins>
         </pluginManagement>
